# euforia

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile.common  Makefile.old  NOTICE.txt  OutputCheckSmt2  README.md  README.rst  THIRD-PARTY-NOTICES.txt  check_equiv_euforia.sh  check_sv-comp_unreach.sh  creduce_euforia.sh  creduce_nonequiv_cbmc.sh  creduce_nonequiv_euforia.sh  creduce_nonequiv_ic3ia.sh  creduce_nonequiv_smack.sh  default.nix  euforia.nix  flake.nix  fmtlib.nix  immer.nix  llvm-5.0.1.patch  mathsat.nix  outputcheck.nix  propagate-const.nix  run_benchmark.sh  run_euforia.sh.in  set_library_id.sh  setup.sh  shell.nix  test_euforia.sh  test_euforia_on_svcomp.sh  z3.nix
examples/: .gitignore  Makefile  PPECA-02-nonequiv-commands.txt  PPECA-nonequiv-commands.txt  another.vmt  another1.vmt  array_ex1.vmt  array_ex2.vmt  array_max_safe.vmt  array_max_safe_2.vmt  bad-array-lemma.vmt  bad-phi_false.vmt  bad-preimage_true.vmt  bad-sm_true.vmt  bad-takes-time.vmt  bad-unsound_false.vmt  bad_bmc1.vmt  bad_bmc_existential1.vmt  bad_dupe_bmc_lemma1.vmt  bad_dupe_bmc_lemma2.vmt  bad_fp1.vmt  bad_ite.vmt  badrefine_false.vmt  blast1_safe.vmt  blast1_small_lock_safe.vmt  blast1_small_safe.vmt  blast1_small_unlock_safe.vmt  cav14_137bit_safe.smt2  cav14_16bit_safe.smt2  cav14_8bit_safe.smt2  cav14_safe.smt2  eelim.smt2  ex01.vmt  fun6_true.c.ll  fun6_true.c.smt2  global1_true.vmt  id_context_reuse_gen.py  input1_false.vmt  isinitial-bug1.vmt  isinitial-bug2.vmt  (+35 more)
examples/api_specs/: hmac_md5.c  my_hmac.c  spec1.c  spec1b.c  spec1h.c  spec2.c
examples/euforia_cant/: statemachine3_safe.c  statemachine3_safe.vmt  statemachine4_safe.c  statemachine4_safe.vmt
examples/id_context_reuse/: id_context_reuse.c  id_context_reuse_10_or.c  id_context_reuse_11_or.c  id_context_reuse_12_or.c  id_context_reuse_13_or.c  id_context_reuse_14_or.c  id_context_reuse_15_or.c  id_context_reuse_16_or.c  id_context_reuse_17_or.c  id_context_reuse_18_or.c  id_context_reuse_19_or.c  id_context_reuse_20_or.c  id_context_reuse_2_or.c  id_context_reuse_3_or.c  id_context_reuse_4_or.c  id_context_reuse_5_or.c  id_context_reuse_6_or.c  id_context_reuse_7_or.c  id_context_reuse_8_or.c  id_context_reuse_9_or.c
examples/loopint_horn_clauses/: even_smaller.smt2  even_smaller.vmt  even_smaller_bv.smt2  even_smaller_bv.vmt  even_smaller_functional.vmt  even_smaller_notes.smt2  gpdr_example.smt2  loopint_crash_direct.vmt  loopint_false_direct.vmt  loopint_false_relational.vmt  loopint_true.c  loopint_true.c.ll  loopint_true.c.small.smt2  loopint_true.c.small.vmt  loopint_true_direct.vmt  loopint_true_dumped.vmt
examples/memory/: alias_true.c  alloca.c  sendmail.c  sendmail_simple.c  sortex.c  struct1_false.c  struct2_false.c  struct3_true.c  veritestB.c
examples/old/: transpose.c  transpose_nomem.c
examples/openvpn/: Makefile  openvpn_bpl.py
examples/results-symexbad/: symexbad-klee-raw.csv  symexbad-klee.py  symexbad-my-raw.csv  symexbad-my-times-old.txt  symexbad-my-times.txt  symexbad.py  symexbad.xlsx
examples/rummer_horn_clauses/: actual_cex.ll  cx.out  rummer_safe.c  rummer_safe.c.ll  rummer_safe.c.smt2  rummer_safe_fsmall.smt2  rummer_safe_small.orig.smt2  rummer_safe_small.orig.vmt  rummer_safe_small.smt2  rummer_safe_small.vmt  run_sea.sh
examples/slam_examples/: Makefile  fooinc.c  infeaspath1_true.c  ndf1_true.c  relcomplete1_true.c  reverse.c  slam-get-unit-false.c  slam-get-unit-true.c  slam-locks-fail.c  slam-locks-pass.c  slam1_true.c
examples/sv-comp_examples/: Makefile  benchmarks.txt  large-set.txt  results.txt  s3_srvr_1b_true-unreach-call_false-termination.cil.c  statemachine1.c  statemachine2.c  statemachine2a.c  unsolved.txt
src/: .gitattributes  .gitignore  abstract_checker.cc  abstract_checker.h  abstract_checker_impl.cc  abstract_checker_impl.h  abstract_model.cc  abstract_model.h  abstraction_manager.cc  abstraction_manager.h  checker.cc  checker.h  checker_types.cc  checker_types.h  checkersat.cc  checkersat.h  counterexample.cc  counterexample.h  cube.cc  cube.h  existential_elimination.cc  existential_elimination.h  git_version.cc.in  git_version.h  normalize_abstract_expr.cc  normalize_abstract_expr.h  one_hot.cc  one_hot.h  term_universe.cc  term_universe.h  tslice.cc  tslice.h  version.cc.in
src/refinement/: bmc_one_shot_refiner.cc  bmc_one_shot_refiner.h  bmc_symex_refiner.cc  bmc_symex_refiner.h  fp_answer_scrubber.cc  fp_answer_scrubber.h  fp_mus_refiner.cc  fp_mus_refiner.h  layered_refinement.cc  layered_refinement.h  refiner.h  rmus.cc  rmus.h  state_refiner.cc  state_refiner.h  step_refiner.cc  step_refiner.h  symex.cc  symex.h  symex_state_impl_constraints.inc  symex_state_impl_var_map.inc
src/supp/: boolector_evaluator.cc  boolector_evaluator.h  boolector_solver.cc  boolector_solver.h  boolector_supp.cc  boolector_supp.h  cube_insert_iterator.cc  cube_insert_iterator.h  debug.cc  debug.h  equality_literal.h  euforia_config.cc  euforia_config.h  expr_def_bimap.h  expr_dot_formatter.cc  expr_dot_formatter.h  expr_flattener.cc  expr_flattener.h  expr_fmt.h  expr_graph_traits.h  expr_iterators.h  expr_latex_fmt.cc  expr_latex_fmt.h  expr_normalize.h  expr_rewriter.h  expr_set_traversal.cc  expr_set_traversal.h  expr_stats.cc  (+48 more)
test/: CMakeLists.txt  another.vmt  another1.vmt  array_ex1.vmt  array_ex2.vmt  array_max_safe.vmt  array_max_safe_2.vmt  bad-array-lemma.vmt  bad-phi_false.vmt  bad-preimage_true.vmt  bad-sm_true.c.smt2.vmt  bad-sm_true.c.vmt  bad-sm_true.vmt  bad-takes-time.vmt  bad-unsound_false.c.smt2.vmt  bad-unsound_false.c.vmt  bad-unsound_false.vmt  bad_bmc1.vmt  bad_bmc_existential1.vmt  bad_dupe_bmc_lemma1.vmt  bad_dupe_bmc_lemma2.vmt  bad_fp1.vmt  bad_ite.vmt  badrefine_false.vmt  blast1.c.commander.vmt  blast1.c.naive.vmt  blast1.c.smt2.vmt  blast1_safe.c.smt2.vmt  blast1_safe.c.vmt  blast1_safe.vmt  blast1_small_lock_safe.vmt  blast1_small_safe.vmt  blast1_small_unlock_safe.vmt  fun1_true.c.vmt  fun2_false.c.vmt  fun2_true.c.vmt  fun3_true.c.vmt  fun4_true.c.vmt  fun6_true.c.vmt  fun7_true.c.vmt  (+61 more)
tstest/: .gitignore  Makefile  main.cpp
(+41 files in other folders)
